--- a/project_0/game.ipynb
+++ b/project_0/game.ipynb
@@ -1,17 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "source": [
-    "from game_v2 import score_game\n"
+    "# Игра угадай число"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "from game_v2 import score_game\n",
+    "from game_v2 import random_predict"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Угадываем рандомно"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "source": [
     "score_game(random_predict)"
    ],
@@ -20,18 +35,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Your algorithm guesses the number on average in: 101 tries\n"
+      "Ваш алгоритм угадывает число в среднем за: 18 попыток\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "101"
+       "18"
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 16
     }
    ],
    "metadata": {}
